fix: adjust footer max-width for better spacing

--- a/src/components/layout/Footer/Footer.module.scss
+++ b/src/components/layout/Footer/Footer.module.scss
@@ -1,7 +1,7 @@
 .footer {
   display: flex;
   width: 100%;
-  max-width: calc(1200px - 8rem);
+  max-width: calc(1200px - 8.75rem);
   flex-flow: column wrap;
   align-items: flex-start;
   justify-content: space-between;
